# nyaos3000

./: .gitignore  Makefile  Makefile.bcc  Makefile.emx  Makefile.k  Makefile.mgw  Makefile.os2  Makefile.sc  Makefile.vc  _nya  build.txt  cmdchdir.cpp  cmds1.cpp  cmds2.cpp  config.h  const.h  dbcs.cpp  document.erb  dosshell.cpp  english.txt  error.txt  foreach.cpp  getch_msvc.cpp  getline.cpp  getline.h  getline2.cpp  history.cpp  history.h  ifdef.cmd  ifdef.vbs  ishell.cpp  ishell.h  keybound.cpp  keyfunc.cpp  lsf.cpp  lua32com.cpp  luautil.cpp  makedoc.ny  makemake.cmd  meson.build  (+56 more)
subprojects/: lua.wrap
subprojects/packagefiles/lua/: meson.build
