project('nyaos3000', ['c', 'cpp'])

lua_dep = dependency('lua')
args = ['-DNYACUS']
executable(
    'nyaos',
    [
        'nyados.cpp',
        'twinbuf.cpp',
        'getline.cpp',
        'getline2.cpp',
        'keybound.cpp',
        'keyfunc.cpp',
        'dosshell.cpp',
        'xscript.cpp',
        'shell.cpp',
        'shell4.cpp',
        'scrshell.cpp',
        'ishell.cpp',
        'mysystem.cpp',
        'shellstr.cpp',
        'cmds1.cpp',
        'cmds2.cpp',
        'cmdchdir.cpp',
        'foreach.cpp',
        'lsf.cpp',
        'nnstring.cpp',
        'nnvector.cpp',
        'nnhash.cpp',
        'strfork.cpp',
        'nnlua.cpp',
        'dbcs.cpp',
        'writer.cpp',
        'reader.cpp',
        'nndir.cpp',
        'wildcard.cpp',
        'ntcons.cpp',
        'open.cpp',
        'getch_msvc.cpp',
        'lua32com.cpp',
        'win32com.cpp',
        'nua.cpp',
        'luautil.cpp',
        'source.cpp',
        'history.cpp',
        'shortcut.cpp',
        'which.cpp',
    ],
    c_args: args,
    cpp_args: args,
    dependencies: [lua_dep],
)
