project('lua', 'c', version: '5.2.3')
lua_lib = static_library(
    'lua',
    [
        'lapi.c',
        'lcode.c',
        'ldebug.c',
        'ldo.c',
        'ldump.c',
        'lfunc.c',
        'lgc.c',
        'llex.c',
        'lmem.c',
        'lobject.c',
        'lopcodes.c',
        'lparser.c',
        'lstate.c',
        'lstring.c',
        'ltable.c',
        'ltm.c',
        'lundump.c',
        'lvm.c',
        'lzio.c',
        'ltests.c',
        'lauxlib.c',
        'lbaselib.c',
        'ldblib.c',
        'liolib.c',
        'lmathlib.c',
        'loslib.c',
        'ltablib.c',
        'lstrlib.c',
        'loadlib.c',
        'linit.c',
        'lcorolib.c',
        'lbitlib.c',
        'lctype.c',
    ],
)
lua_dep = declare_dependency(
    link_with: lua_lib,
    include_directories: include_directories('.'),
)
